--- a/.travis.yml
+++ b/.travis.yml
@@ -1,14 +1,4 @@
 language: cpp
 compiler: gcc
-
-- os: linux
-  addons:
-    apt:
-      packages:
-        - libpulse-dev
-        - libopus-dev
-        - libopusfile-dev
-
-install:
-  - make build
-  - make clean
+before_install: sudo apt-get install libpulse-dev libopus-dev libopusfile-dev
+install: make build
