--- a/.travis.yml
+++ b/.travis.yml
@@ -2,3 +2,4 @@ language: cpp
 compiler: gcc
 before_install: sudo apt-get install libpulse-dev libopus-dev libopusfile-dev
 install: make build
+script: echo "Tests aren't valid for this program"
