Skip tests because it doesn't make sense here

--- a/.travis.yml
+++ b/.travis.yml
@@ -2,4 +2,6 @@ language: cpp
 compiler: gcc
 before_install: sudo apt-get install libpulse-dev libopus-dev libopusfile-dev
 install: make build
-script: echo "Tests aren't valid for this program"
+script:
+  - echo "Tests aren't valid for this program"
+  - make clean
