--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,6 @@
 language: cpp
 compiler: gcc
-before_install: sudo apt-get install libpulse-dev libopus-dev libopusfile-dev
+before_install: sudo apt-get install portaudio19-dev libopus-dev libopusfile-dev
 install: make build
 script:
   - echo "Tests aren't valid for this program"
