--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,15 @@
 language: cpp
 compiler: gcc
-before_install: sudo apt-get install portaudio19-dev libopus-dev libopusfile-dev
-install: make build
-script:
-  - echo "Tests aren't valid for this program"
-  - make clean
+matrix:
+  include:
+    - os: linux
+      before_install: sudo apt-get install portaudio19-dev libopus-dev libopusfile-dev
+      install: make build
+      script: echo "No tests assigned!"
+
+    - os: osx
+      before_install:
+        - ruby -e "$(curl -fsSL https://raw.githubusercontent.com/Homebrew/install/master/install)" < /dev/null 2> /dev/null
+        - brew install opusfile opus portaudio
+      install: make build
+      script: echo "No tests assigned!"
