--- a/.github/workflows/ccpp.yml
+++ b/.github/workflows/ccpp.yml
@@ -4,13 +4,12 @@ on: [push]
 
 jobs:
   build:
-
     runs-on: ubuntu-latest
     
     steps:
     - uses: actions/checkout@v2
-    - name: Install dependencies for compilation.
-      run: apt-get install libopusfile-dev portaudio19-dev
+    - name: install dependencies for compilation
+      run: sudo apt-get install libopusfile-dev portaudio19-dev
     
-    - name: Build binaries from source.
-      run: make build
+    - name: build binaries from source
+      run: make build -j2
