--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,13 @@
 language: cpp
 compiler: gcc
+# ^ tool chain to use for compilation,
+#   almost anywhere.
 matrix:
   include:
     - os: linux
-      before_install: sudo apt-get install portaudio19-dev libopus-dev libopusfile-dev
+      before_install:
+        - echo "$(lsb_release -d | sed -r 's/^\w+:(\s+)?//') ($(uname -rs))"
+        - sudo apt-get install portaudio19-dev libopus-dev libopusfile-dev
       install: make build
       script: echo "No tests assigned!"
 
