--- a/.github/workflows/ccpp.yml
+++ b/.github/workflows/ccpp.yml
@@ -18,4 +18,4 @@ jobs:
       uses: actions/upload-artifact@v1
       with:
         name: opusplayer
-        path: "bin/opusplayer.out"
+        path: "opusplayer.out"
